# model-as-service-python-springboot

./: README.md  pom.xml  readme.md
hr-model-env/: pyvenv.cfg
src/main/java/com/gonnect/hr/model/: HazelcastConfigurer.java  HrApis.java  HrModelApplication.java  ModelPredict.java
src/main/python/: RandomForestRegressor.pmml  nabee_model.p  pyproject.toml  random_forest_regression.py
src/main/resources/: application.properties
src/test/java/com/gonnect/hr/model/: HrModelApplicationTests.java
